--- a/modules/custom/d8training/d8training.services.yml
+++ b/modules/custom/d8training/d8training.services.yml
@@ -3,3 +3,7 @@ services:
     class: Drupal\d8training\NodelistingQueryCheckAccess
     tags:
       - { name: access_check, applies_to: _query_site_id_check }
+
+  d8training.form_manager:
+    class: Drupal\d8training\FormManager
+    arguments: ['@database']
